[package]
name = "keybase-bot-api"
version = "0.1.0"
authors = ["Marco Munizaga <marco@marcopolo.io>"]
edition = "2018"
description = "Write bots for Keybase"
repository = "https://github.com/MarcoPolo/keybase-bot-api"
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["keybase", "bot"]
categories = ["api-bindings"]

[dependencies]
pest = "2.1.1"
#  keybase-protocol = { path = "../rusty-keybase-protocol" }
keybase-protocol = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-preview = "0.3.0-alpha.18"